_deploy/k8s/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"
  name: blog
spec:
  rules:
  - host: blog.pi.bjv.me
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: blog
            port:
              number: 80
  - host: bjv.me
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: blog
            port:
              number: 80
  tls:
  - hosts:
    - bjv.me
    - blog.pi.bjv.me
    secretName: blog-tls-secret
