_deploy/k8s/netpol.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: blog-open-ingress
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector:
    matchLabels:
      run: blog
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 80
  egress: []
